Add isAdmin field on user register
